# shadowanalytics-mcp

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE.md  Zoltan-Pozsar-Bibliography.html
.github/workflows/: ci.yml  release-smoke.yml
crates/advisor-core/: Cargo.toml
crates/advisor-core/src/: lib.rs
crates/advisor-policy/: Cargo.toml
crates/advisor-policy/src/: lib.rs
crates/corpus-cli/: Cargo.toml
crates/corpus-cli/src/: main.rs
crates/corpus-cli/tests/: eval_search_tests.rs
crates/market-context/: Cargo.toml
crates/market-context/src/: lib.rs
crates/market-data-adapters/: Cargo.toml
crates/market-data-adapters/src/: lib.rs
crates/market-data-adapters/tests/: market_data_adapters_tests.rs
crates/pozsar-kb/: Cargo.toml
crates/pozsar-kb/src/: artifacts.rs  chunk.rs  extract.rs  inspect.rs  lib.rs  manifest.rs  qdrant.rs  themes.rs
crates/pozsar-kb/tests/: artifacts_tests.rs  chunk_tests.rs  extract_tests.rs  inspect_tests.rs  manifest_tests.rs  qdrant_tests.rs  themes_tests.rs
crates/pozsar-mcp/: Cargo.toml
crates/pozsar-mcp/src/: lib.rs  main.rs  research.rs  search.rs  signals.rs  tools.rs
crates/pozsar-mcp/tests/: source_search_tests.rs  version_tests.rs
crates/pozsar-mcp/tests/fixtures/: pozsar_chunks.jsonl
data/market/: sample_prices.csv
docs/: EXAMPLES.md  MCP.md  PUBLICATION_CHECKLIST.md  QUICKSTART.md  README.md  SOURCE_MAP.md
docs/examples/: eval-report.json
eval/fixtures/: advisor_eval.json  advisor_policy_eval.json  advisor_policy_snapshot.json  market_context_risk_on.json  pozsar_eval.json
scripts/: demo-mcp-advisor.sh  demo-mcp-search.sh  package-release.sh  smoke-package.sh
