[workspace]
members = [
    "crates/pozsar-kb",
    "crates/corpus-cli",
    "crates/pozsar-mcp",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
euclid = "0.20.5"
pdf-extract = "0.7"
qdrant-client = "1"
rayon = "1"
rmcp = { version = "0.6", features = ["server"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
