[package]
name = "corpus-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "corpus"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
pozsar-kb = { path = "../pozsar-kb" }
pozsar-mcp = { path = "../pozsar-mcp" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
