[package]
name = "corpus-cli"
edition.workspace = true
license.workspace = true
version.workspace = true

[[bin]]
name = "corpus"
path = "src/main.rs"

[dependencies]
advisor-core = { path = "../advisor-core" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
market-data-adapters = { path = "../market-data-adapters" }
market-context = { path = "../market-context" }
pozsar-kb = { path = "../pozsar-kb" }
pozsar-mcp = { path = "../pozsar-mcp" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
