[package]
name = "pozsar-kb"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
euclid.workspace = true
pdf-extract.workspace = true
qdrant-client.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
